removed cache, brought decimal library for price, balance handling
